updated portfolio page with current projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,16 +34,13 @@
 			<div class='header-underline'></div>
 			<div class='portcenter'>
 			<div class='city-planning'>
-				<a href='#'><img src='assets/images/city.jpeg' alt='city'><span>City Planning</span></a>
+				<a href='https://maximusunc.github.io/Hangman-Game/'><img src='assets/images/Hangman.jpg' alt='hangman'><span>Hangman</span></a>
 			</div>
 			<div class='woman'>
-				<a href='#'><img src='assets/images/woman.jpeg' alt='Woman'><span>Graphic Design</span></a>
+				<a href='https://maximusunc.github.io/week-4-game/'><img src='assets/images/blue-crystal.jpeg' alt='CrystalsCollector'><span>Crystals Collector</span></a>
 			</div>
 			<div class='knight'>
-				<a href='#'><img src='assets/images/night.jpeg' alt='Nighttime City'><span>Knight L1fe</span></a>
-			</div>
-			<div class='running'>
-				<a href='#'><img src='assets/images/running.jpeg' alt='Running'><span>Running Logistics</span></a>
+				<a href='https://maximusunc.github.io/TriviaGame/'><img src='assets/images/Trivia.png' alt='Trivia'><span>Trivia Game</span></a>
 			</div>
 			</div>
 
